syntax = "proto3";

package pb;

option go_package = "barbershop/src/pb/barber";


message DeleteBarberRolesRequest{
    string id = 1;
}

message DeleteBarberRolesResponse{
    string status = 1;
}
